# dom_query

./: CHANGELOG.md  Cargo.toml  Examples.md  LICENSE  README.md  test_md.md
.github/: dependabot.yml
.github/workflows/: audit.yml  coverage.yml  raspberrypi5.yml  rust-arm64.yml  rust.yml  wasm.yml
benches/: normalize.rs
dom-query-bench/: Cargo.toml  README.md  test-pages
dom-query-bench/benches/: add_class.rs  merging.rs  normalized_char_count.rs  parsing.rs  remove_class.rs  selection.rs  serializing.rs
dom-query-bench/tests/: selection.rs
examples/: attribute.rs  demo.rs  descendant_elements.rs  fetch_hacker_news.rs  hacker_news.rs  inner_html.rs  manipulate_html.rs  markdown.rs  pseudo_classes.rs  readability.rs  readability2.rs  remove_elements.rs  send_document.rs  serialize_html.rs  tag_name.rs  text.rs
src/: css.rs  css_path.rs  document.rs  dom_tree.rs  element.rs  entities.rs  fragment.rs  lib.rs  manipulation.rs  matcher.rs  mini_selector.rs  node.rs  property.rs  query.rs  selection.rs  serializing.rs  traversal.rs
src/dom_tree/: handler.rs  helpers.rs  ops.rs  traversal.rs  tree.rs  validation.rs
src/mini_selector/: extension.rs  parser.rs  selector.rs
src/node/: id_provider.rs  inner.rs  iters.rs  node_data.rs  node_ref.rs  selector.rs  serializing.rs  text_formatting.rs
src/serializing/: md.rs
src/serializing/md/: constants.rs  ext.rs  serializer.rs  text_utils.rs
test-pages/: 002.html  mathml.html  rustwiki_2024.html
tests/: alloc.rs  data.rs  html-dom.rs  html-tree-sink.rs  node-manipulation.rs  node-traversal.rs  parsing.rs  pseudo-class.rs  pseudo-classes.rs  selection-manipulation.rs  selection-property.rs  selection-query.rs  selection-traversal.rs  utils.rs
