[package]
name = "dom_query"
version = "0.10.0"
description = "HTML querying and manipulation with CSS selectors"
license = "MIT"
repository = "https://github.com/niklak/dom_query"
documentation = "https://docs.rs/dom_query/latest"
keywords = ["html", "css", "selectors", "scraping", "parser"]
authors = ["niklak <morgenpurple@gmail.com>","importcjj <importcjj@gmail.com>"]
edition = "2021"
readme = "README.md"
rust-version = "1.65"
exclude = [".*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.29.0"
selectors = "0.26.0"
cssparser = "0.34.0"
tendril = "0.4.3"
foldhash = "0.1.3"
hashbrown = {version = "0.15.2", default-features = false, features = ["allocator-api2", "inline-more", "default-hasher"], optional = true}
precomputed-hash = "0.1.1"

[dev-dependencies]
ureq = {version = "2.10.1", default-features = false}
wasm-bindgen-test = "0.3.0"
mini-alloc = "0.6.0"

[features]
hashbrown = ["dep:hashbrown"]
atomic = []
