[package]
name = "dom-query-bench"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
dom_query = { path = "..", features = ["mini_selector"] }
[dev-dependencies]
criterion = { version = "0.8.1" }

[[bench]]
name = "selection"
harness = false

[[bench]]
name = "normalized_char_count"
harness = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "serializing"
harness = false

[[bench]]
name = "merging"
harness = false